--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -15,5 +15,9 @@ zuul:
       stripPrefix: false
       sensitiveHeaders:
 
+spring:
+   main:
+     allow-bean-definition-overriding: true
+     
 server:
   port: 8090
