--- a/identity-manager.yml
+++ b/identity-manager.yml
@@ -2,3 +2,11 @@ server:
   servlet:
     context-path: /identity-manager
   port: 8081
+
+management:
+  security:
+    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: *
