--- a/identity-manager.yml
+++ b/identity-manager.yml
@@ -11,5 +11,12 @@ management:
     beans:
       enabled:  false
 
+spring:
+  rabbitmq:
+    host: localhost
+#    port: 15672
+#    username: admin
+#    password: admin
+
 app:
   service-name: identity-manager service1000
