--- a/identity-manager.yml
+++ b/identity-manager.yml
@@ -17,6 +17,10 @@ spring:
     port: 5672
     username: admin
     password: admin
+  datasource:
+    url: jdbc:mysql://localhost:3306/dtms_v1?useSSL=false
+    username: root
+    password: root
 
 app:
   service-name: identity-manager service10024
